chapters/05-service-mesh/manifests/virtualservice-account-service-stable.yaml
# Use this to send 100% of traffic back to v1.0 (rollback / pre-canary state)
# oc apply -f virtualservice-account-service-stable.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-service
  namespace: myfinance-demo
  labels:
    app: financeflow
spec:
  hosts:
    - account-service
  http:
    - route:
        - destination:
            host: account-service
            subset: v1-0
          weight: 100
      timeout: 10s
      retries:
        attempts: 3
        perTryTimeout: 3s
        retryOn: "5xx,reset,connect-failure"
