chapters/05-service-mesh/manifests/virtualservice-account-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-service
  namespace: myfinance-demo
  labels:
    app: financeflow
spec:
  hosts:
    - account-service

  http:
    # Canary: 90% to stable v1.0, 10% to new v1.1
    - route:
        - destination:
            host: account-service
            subset: v1-0
          weight: 90
        - destination:
            host: account-service
            subset: v1-1
          weight: 10
      timeout: 10s
      retries:
        attempts: 3
        perTryTimeout: 3s
        retryOn: "5xx,reset,connect-failure"
